tests/macro-tests/cases/widget_new/missing_semi_in_when2.stderr
error: expected `,`
  --> cases/widget_new/missing_semi_in_when2.rs:16:13
   |
16 |             cursor = CursorIcon::Pointer;
   |             ^^^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_semi_in_when2.rs:15:13
   |
11 |       let _ = Wgt! {
   |  _____________-
12 | |         margin = 0;
13 | |         cursor = CursorIcon::Default;
14 | |         when *#is_pressed {
15 | |             margin =
   | |             ^^^^^^
16 | |             cursor = CursorIcon::Pointer;
17 | |         }
18 | |     };
   | |_____- an argument is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt/src/layout_props.rs
   |
   | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   | margin(/* margin */)
   |
